--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1>{{ aHello[0] }} {{char.name}}</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/e20180008918/symfobacasable/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/e20180008918/symfobacasable/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+    {# Le genre de Jon Snow (spoil: c'est un Male !) #}
+    <p> Genre : {{char.gender}}</br>  
+    {# Les informations sur sa date de naissance #}
+    Date de naissance :  {{char.born}} </br>  
+    {# Le nom et prénom de l'acteur qui joue le personnage #}
+    {% if char.playedBy[0] != "" %}
+    Joué.e par {{char.playedBy[0]}}
+    {% endif %}
+    </p>
+
+    <p style="display:none">
+    {% if char.died != "" %}
+    Personnage mort
+    {% endif %}
+    </p>
+
+{{dump(char)}}
+
 </div>
 {% endblock %}
